# device_fingerprint

./: CMakeLists.txt
demo/: CMakeLists.txt  main.cpp
sdk/: CMakeLists.txt
sdk/include/: fingerprint.h
sdk/src/: fingerprint.cpp
test/: CMakeLists.txt  test.cpp
